--- a/Views/LePhiXetTuyens/Index.cshtml
+++ b/Views/LePhiXetTuyens/Index.cshtml
@@ -3,16 +3,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script>
+    var MinhChungFormData = new FormData();
+    var MinhChungPath = "";
     $('document').ready(function () {
         $("#list-hocba").hide();
         $("#list-tuyenthang").hide();
         $("#list-ngoaingu").hide();
         $("#list-dgnl").hide();
         LoadData();
+
+        $('input').on('input', function () {
+            hideErrorMessage($(this));
+        });
+
+        $('select').on('input', function () {
+            hideErrorMessage($(this));
+        })
+
+        $("#file_minhchung").on("change", function () {
+            var file_minhchung = document.getElementById('file_minhchung');
+            let j = 0;
+            for (i = 0; i < file_minhchung.files.length; i++) {
+                j++;
+                var uploadFileName = file_minhchung.files[i].name;
+                let uploadFileId = Math.random().toString(36).substring(7);
+                MinhChungFormData.append(uploadFileName, file_minhchung.files[i]);
+                var markup = `<tr id='${uploadFileId}'><td  style='color:blue'>Tệp ${j}: </td><td>${uploadFileName}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("#FilesList_KinhPhi_TepMinhChung_View", "${uploadFileId}", "${uploadFileName}")'>Xóa</a></td></tr>`;
+                $("#FilesList_KinhPhi_TepMinhChung_View tbody").append(markup);
+            }
+            CheckAttachTable("#FilesList_KinhPhi_TepMinhChung_View");
+            $('#file_minhchung').val('');
+        });
     })
+
+    function DeleteUploadedFile(ListId, Fileid, FileName) {
+        let formData = MinhChungFormData;
+        formData.delete(FileName)
+        $("#" + Fileid).remove();
+        CheckAttachTable(ListId);
+    }
+
+    function CheckAttachTable(list) {
+        if ($(`${list} tr`).length > 0) {
+            $(list).css("visibility", "visible");
+        } else {
+            $(list).css("visibility", "hidden");
+        }
+    }
+
     function LoadData() {
         $.ajax({
-            url: "/KetQuaXetTuyens/GetAllNguyenVongs",
+            url: "/LePhiXetTuyens/GetAllLePhi",
             type: "GET",
             contentType: "application/json;charset=utf-8",
             success: function (response) {
@@ -125,10 +167,114 @@
                 console.error(error);
             },
         });
+    }
 
-        function NopLePhi(id, type) {
+    function NopLePhi(id, type) {
+        $('#key_dkxt_id').val(id)
+        $('#key_dkxt_pt').val(type)
+        $('#modal_dongphi').modal('show');
+    }
 
+    function onCancel() {
+        $('#modal_dongphi').modal('hide');
+        $('#key_dkxt_id').val('');
+        $('#key_dkxt_pt').val('');
+    }
+
+    function uploadFiles() {
+        var url = '/LePhiXetTuyens/UploadLePhiMinhChung';
+        var fileCount = 0;
+        for (var pair of MinhChungFormData.entries()) {
+            if (pair[1] instanceof File) {
+                fileCount++;
+            }
         }
+        if (fileCount > 0) {
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: MinhChungFormData,
+                processData: false,
+                contentType: false,
+                async: false,
+                success: function (response) {
+                    if (response.success) {
+                        MinhChungPath = response.message;
+                    }
+                },
+                error: function (error) {
+                    console.error('Error uploading files:', error);
+                }
+            });
+        }
+    }
+
+    function onSubmit() {
+        $(".text-danger").text("");
+        let flag = true;
+        let KinhPhi_SoTC = $('#KinhPhi_SoTC').val();
+        let key_dkxt_id = $('#key_dkxt_id').val();
+        let key_dkxt_pt = $('#key_dkxt_pt').val();
+
+        if (!KinhPhi_SoTC) {
+            var errorMessage = "Vui lòng chọn ngành";
+            $('#KinhPhi_SoTC_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!flag) return;
+        $("#loadingModal").modal("show");
+        uploadFiles();
+        let formData = {
+            KinhPhi_SoTC: KinhPhi_SoTC,
+            KinhPhi_TepMinhChung: MinhChungPath,
+            key_dkxt_id: key_dkxt_id,
+            key_dkxt_pt: key_dkxt_pt
+        }
+
+        $.ajax({
+            url: "/LePhiXetTuyens/Create",
+            data: JSON.stringify(formData),
+            type: 'POST',
+            contentType: 'application/json;charset=utf-8',
+            dataType: 'json',
+            success: function (res) {
+                if (res.success) {
+                    showToast("Thông báo", "Đóng lệ phí thành công!", "bg-success");
+                    onResetFields();
+                    $("#loadingModal").modal("hide");
+                    $('#modal_dongphi').modal('hide');
+                } else {
+                    showToast("Thông báo", "Có lỗi xảy ra khi đóng lệ phí!", "bg-error");
+                    $("#loadingModal").modal("hide");
+                    $('#modal_dongphi').modal('hide');
+                }
+            },
+            error: function (errormessage) {
+                showToast("Thông báo", "Có lỗi xảy ra khi đóng lệ phí!", "bg-error");
+                $("#loadingModal").modal("hide");
+                $('#modal_dongphi').modal('hide');
+            }
+        });
+    }
+
+    function showToast(title, message, bgColor) {
+        $("#myToast .toast-header .me-auto").text(title);
+        $("#myToast .toast-body").text(message);
+        $("#myToast .toast").removeClass("bg-success bg-danger").addClass(bgColor);
+        $("#myToast").toast("show");
+    }
+
+    function hideErrorMessage(input) {
+        var errorContainer = input.next('.text-danger');
+        errorContainer.text('');
+    }
+
+    function onResetFields() {
+        $('#key_dkxt_id').val("");
+        $('#key_dkxt_pt').val("");
+        $('#KinhPhi_SoTC').val("");
+        $('#file_minhchung').val(null);
+        $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();
     }
 </script>
 <style>
@@ -259,22 +405,55 @@
             </div>
         </div>
     </div>
+    <input id="key_dkxt_id" type="hidden" />
+    <input id="key_dkxt_pt" type="hidden" />
     <div class="modal fade" id="modal_dongphi" tabindex="-1" role="dialog" aria-labelledby="modal_dongphi" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal_dongphi">Thông báo</h5>
-                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title" id="modal_dongphi">Nhập thông tin</h5>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" onclick="onCancel()"></button>
                 </div>
                 <div class="modal-body">
-                    <span>Bạn chắc chắn nguyện vọng này dữ liệu này?</span>
-                    <input id="key_delete_dkxt_id" type="hidden" />
-                    <input id="key_delete_dkxt_tohop" type="hidden" />
+                    <div class="row g-3 align-items-center mb-2">
+                        <div class="col-4">
+                            <label for="select_namtn" class="col-form-label">Mã giao dịch:</label>
+                        </div>
+                        <div class="col-8">
+                            <input id="KinhPhi_SoTC" class="form-control" placeholder="Mã giao dịch" value="" />
+                            <span id="KinhPhi_SoTC_Error" class="small mb-1 text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-xxl-12">
+                        <div class="form-group mb-2">
+                            <label class="form-label">Tệp minh chứng: </label>
+                            <div class="col-md-12">
+                                <input class="form-control" id="file_minhchung" multiple name="files" type="file" data-val="true" data-val-required="Vui lòng chọn tệp minh chứng"
+                                       accept="application/pdf,.png, .jpeg, .jpg" />
+                                <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
+                                <table class="table" id="FilesList_KinhPhi_TepMinhChung_View" style="visibility:hidden; width: 100%">
+                                    <tr style="display:none">
+                                        <th colspan="3"><input type="hidden" id="KinhPhi_TepMinhChung_Files" /></th>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-bs-dismiss="modal" onclick="deleteRecordCancel()">Hủy</button>
-                    <button class="btn btn-primary" type="button" onclick="deleteRecordConfirmed()">Đồng ý</button>
+                    <button class="btn btn-secondary" type="button" data-bs-dismiss="modal" onclick="onCancel()">Hủy</button>
+                    <button class="btn btn-primary" type="button" onclick="onSubmit()">Đồng ý</button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Toast Title</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
             </div>
         </div>
     </div>
