--- a/Views/HocVienDangKies/HvThongTin.cshtml
+++ b/Views/HocVienDangKies/HvThongTin.cshtml
@@ -541,20 +541,38 @@
 
     /* Kiểm tra không cho phép nhập chữ tại các ô có số */
     $(document).ready(function () {
-        View_Data_HocVien()// hiển thị thông tin học viên
-       
-        setInputFilter($("#Update_HocVien_DienThoai"), function (value) {
+        function setInputFilter(textbox, inputFilter) {
+            ["input", "keydown", "keyup", "mousedown", "mouseup", "select", "contextmenu", "drop"].forEach(function (event) {
+                textbox.addEventListener(event, function () {
+                    if (inputFilter(this.value)) {
+                        this.oldValue = this.value;
+                        this.oldSelectionStart = this.selectionStart;
+                        this.oldSelectionEnd = this.selectionEnd;
+                    } else if (this.hasOwnProperty("oldValue")) {
+                        this.value = this.oldValue;
+                        this.setSelectionRange(this.oldSelectionStart, this.oldSelectionEnd);
+                    } else {
+                        this.value = "";
+                    }
+                });
+            });
+        }
+        setInputFilter(document.getElementById("HocVien_DienThoai"), function (value) {
             return /^\d*$/.test(value);
         });
-        setInputFilter($("#Update_HocVien_CCCD"), function (value) {
+        setInputFilter(document.getElementById("HocVien_CCCD"), function (value) {
             return /^\d*$/.test(value);
         });
-        setInputFilter($("#Update_HocVien_BangDaiHoc_NamTN"), function (value) {
+        setInputFilter(document.getElementById("HocVien_BangDaiHoc_NamTN"), function (value) {
             return /^\d*$/.test(value);
         });
-        setInputFilter($("#Update_HocVien_BangDaiHoc_DiemToanKhoa"), function (value) {
+        setInputFilter(document.getElementById("HocVien_BangDaiHoc_DiemToanKhoa"), function (value) {
             return /^-?\d*[.,]?\d*$/.test(value);
         });
+    })
+
+    $(document).ready(function () {
+        View_Data_HocVien();
         // hiển thị thông tin cho nơi sinh - Tỉnh
         $('#bt_hocvien_view_div_update').click(function () {
 
@@ -575,27 +593,10 @@
         });
     })
 
-    function setInputFilter(textbox, inputFilter) {
-        ["input", "keydown", "keyup", "mousedown", "mouseup", "select", "contextmenu", "drop"].forEach(function (event) {
-            textbox.addEventListener(event, function () {
-                if (inputFilter(this.value)) {
-                    this.oldValue = this.value;
-                    this.oldSelectionStart = this.selectionStart;
-                    this.oldSelectionEnd = this.selectionEnd;
-                }
-                else if (this.hasOwnProperty("oldValue")) {
-                    this.value = this.oldValue;
-                    this.setSelectionRange(this.oldSelectionStart, this.oldSelectionEnd);
-                }
-                else {
-                    this.value = "";
-                }
-            });
-        });
-    }
+   
     function View_Data_HocVien() {
         $.ajax({
-            url: "/HocVienDangKies/GetHocVien",
+            url: "/HocVienDangKies/HvThongTinGetByID",
             type: "GET",
             contentType: "application/json;charset=utf-8",
             dataType: "json",
@@ -643,43 +644,10 @@
             }
         });
     }
-    function View_Data_NoiSinh_Update() {
-        var key_ns = $('#Update_HocVien_NoiSinh_Key').val();
-        console.log(key_ns);
-
-        $.ajax({
-            url: "/Auth/GetTinh",
-            type: "POST",
-            contentType: "application/json;charset=utf-8",
-            dataType: "json",
-            async: false,
-            success: function (response) {
-                console.log(response);
-                console.log(key_ns);
-
-                /*    return;*/
-                if (response.success) {
-                    let data = response.data;
-
-                    let hocVien_noiSinh_tinh = $('#Update_HocVien_NoiSinh');
-                    hocVien_noiSinh_tinh.empty();
-                    hocVien_noiSinh_tinh.append($('<option></option>').val("0").text("Chọn tỉnh..."));
-
-                    $.each(data, function (index, item) {
-                        hocVien_noiSinh_tinh.append($('<option></option>').val(item.tinh_ID).text(item.tinh_Ten));
-                    });
-
-                    $('#Update_HocVien_NoiSinh').val(key_ns);
-                } else { }
-            },
-            error: function (errormessage) {
-                console.log(errormessage.responseText);
-            }
-        });
-    }
+    
     function View_Data_HocVien_Edit() {
         $.ajax({
-            url: "/HocVienDangKies/GetHocVien",
+            url: "/HocVienDangKies/HvThongTinGetByID",
             type: "GET",
             contentType: "application/json;charset=utf-8",
             dataType: "json",
@@ -730,6 +698,42 @@
             }
         });
     }
+
+    function View_Data_NoiSinh_Update() {
+        var key_ns = $('#Update_HocVien_NoiSinh_Key').val();
+        console.log(key_ns);
+
+        $.ajax({
+            url: "/Auth/GetTinh",
+            type: "POST",
+            contentType: "application/json;charset=utf-8",
+            dataType: "json",
+            async: false,
+            success: function (response) {
+                console.log(response);
+                console.log(key_ns);
+
+                /*    return;*/
+                if (response.success) {
+                    let data = response.data;
+
+                    let hocVien_noiSinh_tinh = $('#Update_HocVien_NoiSinh');
+                    hocVien_noiSinh_tinh.empty();
+                    hocVien_noiSinh_tinh.append($('<option></option>').val("0").text("Chọn tỉnh..."));
+
+                    $.each(data, function (index, item) {
+                        hocVien_noiSinh_tinh.append($('<option></option>').val(item.tinh_ID).text(item.tinh_Ten));
+                    });
+
+                    $('#Update_HocVien_NoiSinh').val(key_ns);
+                } else { }
+            },
+            error: function (errormessage) {
+                console.log(errormessage.responseText);
+            }
+        });
+    }
+
     function Submit_Data_HocVien_Update() {
 
         let _hocVien_ID = $('#id_hocvien_presen').val();
@@ -811,7 +815,7 @@
        /* $("#loadingModal").modal("show");*/
 
         $.ajax({
-            url: "/HocVienDangKies/HvDangkyUpdate",
+            url: "/HocVienDangKies/HvThongTinUpdate_DangKy",
             type: "POST",
             data: JSON.stringify(data_hovien_update),
             contentType: "application/json;charset=utf-8",
