--- a/Views/DangKyXetTuyens/dkdtnk.cshtml
+++ b/Views/DangKyXetTuyens/dkdtnk.cshtml
@@ -117,6 +117,18 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <div class="row g-3 align-items-center">
+                                            <div class="col-4">
+                                                <label class="col-form-label">Tên môn thi</label>
+                                            </div>
+                                            <div class="col-8">
+                                                <input id="txt_dangky_monnangkhieu" type="text" class="form-control input-monhoc" value="Chưa chọn" disabled />
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
                         </table>
                     </div>
                     <div class="col-xxl-4">
@@ -125,32 +137,46 @@
                                 <table class="table table-hover">
                                     <thead>
                                         <tr>
-                                            <th style="vertical-align:middle;">Đăng ký dự thi môn năng khiếu <font color="red">(*)</font></th>
+                                            <th style="vertical-align:middle;">Đợt dự thi môn năng khiếu <font color="red">(*)</font></th>
                                         </tr>
                                     </thead>
                                     <tbody id="tbody_list_diemmonhoc">
                                         <tr>
                                             <td>
-                                                <div class="row g-3 align-items-center">
-                                                    <div class="col-5">
-                                                        <label for="select_namtn" class="col-form-label">Năm tốt nghiệp</label>
+                                                <div class="row  align-items-center">
+                                                    <div class="col-4">
+                                                        <label for="select_namtn" class="col-form-label">Đợt thi</label>
                                                     </div>
-                                                    <div class="col-7">
-                                                        <select class="form-select" id="select_namtn"></select>
+                                                    <div class="col-8">
+                                                        <input class="form-control" id="Dxt_Ten" disabled />                                                   
                                                         <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
                                                     </div>
-
                                                 </div>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <div class="row g-3 align-items-center">
-                                                    <div class="col-5">
-                                                        <label for="select_namtn" class="col-form-label">Môn thi năng khiếu</label>
+                                                <div class="row align-items-center">
+                                                    <div class="col-4">
+                                                        <label class="col-form-label">Từ ngày:</label>
                                                     </div>
-                                                    <div class="col-7">
-                                                        <input id="txt_dangky_monnangkhieu" type="text" class="form-control input-monhoc" value="Chưa chọn" disabled />
+                                                    <div class="col-8">
+                                                        <input class="form-control" id="Dxt_ThoiGian_BatDau" disabled />                                                      
+                                                        <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
+                                                    </div>
+                                                </div>                                               
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                
+                                                <div class="row align-items-center">
+                                                    <div class="col-4">
+                                                        <label  class="col-form-label">Đến ngày:</label>
+                                                    </div>
+                                                    <div class="col-8">
+                                                        <input class="form-control" id="Dxt_ThoiGian_KetThuc" disabled />                                                    
+                                                        <span id="NamTotNghiep_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
                                             </td>
@@ -348,6 +374,7 @@
     $(document).ready(function () {
         /* Khai báo dữ liệu cho dropdownlist chọn năm */
         let currentYear = new Date().getFullYear();
+
         let nam_list = [
             { value: 0, text: "Chọn năm" },
             { value: currentYear, text: currentYear },
@@ -491,20 +518,57 @@
     // đồng ý đăng ký dự thi
     $('#bt_add_div_list_registration').click(function () {
         select_nganh_view_data(0, 0);
-        document.getElementById('div_list_registration').style.display = "none";
-        document.getElementById('div_exam_registration').style.display = "inline";
+        $('#div_list_registration').css('display', 'none');
+        $('#div_exam_registration').css('display', 'inline');
+
+        //document.getElementById('div_list_registration').style.display = "none";
+        //document.getElementById('div_exam_registration').style.display = "inline";
         reset_fields_controll_disabled_true();
+        DotThiHienTai();
+
     })
-
+    function DotThiHienTai() {
+        $('#Dxt_ThoiGian_KetThuc').val('');
+        $('#Dxt_ThoiGian_BatDau').val('');
+        $('#Dxt_Ten').val('');
+        
+        $.ajax({
+            url: '/DangKyXetTuyens/DotThiHienTai',
+            type: "GET",
+            contentType: false,
+            processData: false,         
+            async: false,
+            success: function (res) {
+                console.log(res)
+                let data = res.data[0];
+                if (res.success) {
+                    $('#Dxt_ThoiGian_KetThuc').val(data.dxt_ThoiGian_KetThuc);
+                    $('#Dxt_ThoiGian_BatDau').val(data.dxt_ThoiGian_BatDau);
+                    $('#Dxt_Ten').val(data.dxt_Ten);
+                }
+            },
+            error: function (err) {
+                console.log(err.statusText);
+            }
+        });
+    }
     function reset_fields_controll_disabled_false() {
+        $('#Dxt_ThoiGian_KetThuc').val('');
+        $('#Dxt_ThoiGian_BatDau').val('');
+        $('#Dxt_Ten').val('');
 
-        $('#select_namtn').prop('disabled', false);
+       /* $('#select_namtn').prop('disabled', false);*/
         $('#files_cancuoccd').val(null);
         $('#files_cancuoccd').prop('disabled', false);
         $("#FilesList_CCCD_View tbody").empty();
     }
     function reset_fields_controll_disabled_true() {
-        $('#select_namtn').prop('disabled', true);
+        /*  $('#select_namtn').prop('disabled', true);*/
+
+        $('#Dxt_ThoiGian_KetThuc').val('');
+        $('#Dxt_ThoiGian_BatDau').val('');
+        $('#Dxt_Ten').val('');
+
         $('#files_cancuoccd').val(null);
         $('#files_cancuoccd').prop('disabled', true);
         $("#FilesList_CCCD_View tbody").empty();
@@ -523,7 +587,6 @@
         if (_thm_ID == 0) { var errorMessage = "Vui lòng chọn tổ hợp môn"; $('#Thm_ID_Error').text(errorMessage); flag = false; }
         if (_dkdt_NK_NamTotNghiep == 0) { var errorMessage = "Vui lòng chọn năm tốt nghiệp"; $('#NamTotNghiep_Error').text(errorMessage); flag = false; }
         if (!check_in_file_cccd_upload) { var errorMessage = "Vui lòng upload tệp CCCD"; $('#CCCD_Error').text(errorMessage); flag = false; }
-
 
 
         if (!flag) return;
@@ -559,7 +622,7 @@
             Dkdt_NK_MinhChung_CCCD: _dkdt_NK_MinhChung_CCCD,
         }
         /*hết phần khai báo đối tượng*/
-      //  console.log(data_Obj_new);
+        //  console.log(data_Obj_new);
 
         $("#loadingModal").modal("show");
         $.ajax({
